recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: ';' expected but 'else' found.
  else{
  ^